# market-lake

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  STATUS.md  pyproject.toml  requirements.txt
config/: datasets.yaml  macros.yaml  row_count_baseline.json  schemas.yaml  sources.yaml  symbols.yaml
dbt/: .user.yml  dbt_project.yml  profiles.yml.example
dbt/macros/: helpers.sql  safe_cast.sql
dbt/models/: schema.yml
dbt/models/marts/: mart_backtest_equity_panel.sql  mart_backtest_option_panel.sql  mart_fundamental_screen.sql  mart_optimization_inputs.sql  (+3 more)
dbt/seeds/: symbol_aliases.csv
docs/: architecture.md  data_dictionary.md  data_sources.md  ingestion_guide.md  query_guide.md
duckdb/init/: 001_extensions.sql  002_schemas.sql  003_views.sql
examples/: load_existing_data.sh  query_examples.py
raw/thetadata/: README.md
scripts/ingest/: ingest_corporate_actions.py  ingest_earnings_calendar.py  ingest_existing_equity.py  ingest_ff_factors.py  ingest_fred_macro.py  ingest_fundamentals.py  ingest_short_interest.py  ingest_stooq_daily_bars.py  ingest_theta_contracts.py  ingest_theta_option_eod.py  ingest_theta_option_eod_raw.py  ingest_theta_vrp_features.py  ingest_yahoo_daily_bars.py
scripts/ops/: com.market-lake.daily-refresh.plist  daily_refresh.sh  health_check.py  row_count_check.py
src/market_lake/: __init__.py  settings.py
tests/: test_canonical_tables.py  test_contract_id.py  test_manifests.py  test_parquet_io.py  test_symbol_map.py  test_validation_options.py  test_validation_prices.py
(+21 files in other folders)
